# Talos-Cluster

./: .cache_ggshield  .gitignore  .gitleaks.toml  .sops.yaml  CLAUDE.md  README.md  add-loadbalancer-ips.sh  add-resources-to-helm-releases.sh  cert_switch_script.sh  clean-cni-and-restart.sh  cleanup-previous-script.sh  combined_restore.sh  disable-forward-dns.yaml  fix-flannel-setup.sh  fix-loadbalancer-ips.sh  fix-yaml-quotes-simple.sh  fix-yaml-quotes.sh  longhorn-fix.sh  longhorn-namespace.json  longhorn-ns-backup.yaml  make-flux-deploy-key.sh  quote-envvars.sh  restore-prometheus-config.sh  revert_staging_script.sh  ssh-public-key.txt
.claude/rules/: networking.md  traefik-crowdsec.md  truecharts.md
.devcontainer/: devcontainer.json
.githooks/: README.md  pre-commit
.github/: renovate.json5
.github/ci-fixtures/: bad-alertmanagerconfig-malformed.yaml  bad-route-continue-true-to-discord.yaml  bad-severity-mistag.yaml
.github/workflows/: alert-remediation-image.yaml  (+6 more)
apps/alert-remediation-hitl/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
apps/alert-remediation-hitl/src/alert_remediation_hitl/: __init__.py  alertmanager_client.py  audit.py  discord_client.py  main.py  nonce.py  playbooks.py  reconciler.py  settings.py  state.py
apps/alert-remediation-hitl/src/alert_remediation_hitl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/alert-remediation-hitl/tests/: conftest.py  test_nonce.py  test_reconciler.py  test_signature.py  test_state_machine.py
scripts/: fleet-rewrite-secrets.sh  talos-encryption-rollback.sh
(+422 files in other folders)
